Cleanup logging in permission methods